# jp-engine

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
engine/: CMakeLists.txt  app.cc  app.h  camera.cc  camera.h  camera_manager.cc  camera_manager.h  circle_collider.cc  circle_collider.h  collider.cc  collider.h  derived.h  fsm.cc  fsm.h  input.cc  input.h  layer.h  node.cc  node.h  physics.cc  physics.h  rectangle_collider.cc  rectangle_collider.h  resource_manager.cc  resource_manager.h  scene.cc  scene.h  sprite_sheet_animation.cc  sprite_sheet_animation.h  state.cc  state.h  tile.cc  tile.h  tilemap.cc  tilemap.h  tileset.cc  tileset.h  transition.cc  transition.h
game/: CMakeLists.txt  background.cc  background.h  banana.cc  banana.h  copy-assets.cmake  default_scene.cc  default_scene.h  end.cc  end.h  follow_player.cc  follow_player.h  game_manager.cc  game_manager.h  goomba.cc  goomba.h  lose_canvas.cc  lose_canvas.h  main.cc  mario.cc  mario.h  mushroom.cc  mushroom.h  plant.cc  plant.h  plant_bullet.cc  plant_bullet.h  player.cc  player.h  score_manager.cc  score_manager.h  tile_id.h  win_canvas.cc  win_canvas.h
